Refactor training exams/question bank for unified practice and certification